#1 #time 300m Adds the "image.getFeatures", "image.getTags", and "image.getAllRecipes" web services.
